# ds_dashboard

./: .gcloudignore  .gitignore  LICENSE  README.md  app.yaml  environment.yml  form.py  index.py  main.py  plotly_theme_light.py  pyproject.toml  requirements.txt  sample.py
apps/: about.py  cover_letter.py  dashboard.py  form.py  home.py  segmentation.py  tables.py  utils.py
assets/: base.css  s1.css
data_utils/: application_data_schema.json  create_schema.py  datamodel.py  upload_to_bq.py
data_utils/archive/: load_parquet_to_bq.py
tests/: test_schema_consistency.py
