[project]
name = "ds-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "dash-ag-grid>=31.3.0",
    "dash-daq>=0.5.0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=0.15.1",
    "dash-pydantic-form>=0.13.3",
    "db-dtypes>=1.3.1",
    "flask>=3.0.3",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-secret-manager>=2.22.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=0.4.0",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.5",
    "scipy>=1.15.1",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pandas-gbq>=0.26.1",
    "pytest>=8.3.4",
]
